picture not showing

--- a/dummy.html
+++ b/dummy.html
@@ -6,50 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Review Page</title>
 </head>
+<style>
+
+    
+</style>
 <body>
-    <div class="container" style="margin: 30px auto; max-width: 968px;">
+    <div class="container">
         <div class="heading">
             <h1>Review the product</h1>
         </div>
         <div class="body">
-            <div class="productImg" style="width: 300px; height: 300px; position: relative;">
+            <div class="productImg">
                 <img src="knife.png" alt="" srcset="" style="width: 100%;">
             </div>
             <div class="productDesc">
                 <h4>American Knife</h4>
                 <h5>Price: $300</h5>
-                <button style="display:block;
-                color: white;
-                padding:0.5em 1em 0.5em 1em;
-                border-radius:5px;
-                border:none;
-                font-size:12px;
-                position:relative;
-                background:#5689e7;
-                cursor:pointer;
-                height:3em;
-                width:10em;
-                overflow:hidden;
-                transition:transform 0.1s;
-                z-index:1;">Add to Cart</button>
+                <button>Add to Cart</button>
             </div>
             <hr>
             <div class="reviewArea">
-                <div class="pinfo">Write your feedback.</div>
-  
-
-                <div class="form-group">
-                  <div class="col-md-4 inputGroupContainer">
-                  <div class="input-group">
-                  <span class="input-group-addon"><i class="fa fa-pencil"></i></span>
-                  <textarea class="form-control" id="review" rows="3"></textarea>
-                 
-                    </div>
-                  </div>
-                </div>
+                <form action="">
+                    <div class="pinfo">Write your feedback.</div>
+                    <class class="form-group">
+                        <div class="col-md-4 inputGroupContainer">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="fa fa-pencil"></i></span>
+                                <textarea class="form-control" id="review" rows="3"></textarea>
+                            </div>
+                        </div>
+                    </class>
+                </form>
             </div>
             <div class="sentimentFeedback">
-
+                <button>Submit Review</button>
             </div>
         </div>
     </div>
